# ESP-AnyWhere

./: .cproject  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/Bat_MAX17048/: Bat_MAX17048.c  CMakeLists.txt
components/Bat_MAX17048/include/: Bat_MAX17048.h
components/OTA/: CMakeLists.txt  OTA.c
components/OTA/include/: OTA.h
components/SoftAP_STA/: CMakeLists.txt  Kconfig.projbuild  SoftAP_STA.c
components/SoftAP_STA/include/: SoftAP_STA.h
components/Storage/: CMakeLists.txt  Storage.c
components/Storage/include/: Storage.h
components/SyncTime/: CMakeLists.txt  SyncTime.c
components/Telemetry/: CMakeLists.txt  LogsToWeb.c  Telemetry.c
components/Telemetry/include/: LogsToWeb.h  Telemetry.h
components/WebServer/: CMakeLists.txt  ComWS.c  WebServer.c  idf_component.yml
components/WebServer/include/: ComWS.h  WebServer.h
components/WebServer/wwwroot/: index.html  scriptWS.js  style.css
components/esp_wireguard/: CMakeLists.txt  Kconfig  WG.c  component.mk
components/esp_wireguard/Inc/: WG.h  esp_wireguard.h
components/esp_wireguard/Src/: esp_wireguard.c  wireguard.c  wireguardif.c
components/esp_wireguard/Src/crypto/refc/: CMakeLists.txt
components/esp_wireguard/Src/nacl/crypto_scalarmult/curve25519/ref/: smult.c
components/freeRTOS_Stats/: CMakeLists.txt  freeRTOS_Stats.c
components/freeRTOS_Stats/Inc/: freeRTOS_Stats.h
components/iot_usbh_modem/: CMakeLists.txt  Kconfig  idf_component.yml  iot_usbh_modem.c
components/iot_usbh_modem/include/: iot_usbh_modem.h  usbh_modem_board.h
components/iot_usbh_modem/private_include/: esp_modem_dce_common_commands.h
components/iot_usbh_modem/src/: esp_modem_dce_common_commands.c  esp_modem_usb_dte.c  usbh_modem_board.c
main/: CMakeLists.txt  main.c
